objects/HotDocs_Request_Item__c.object
<CustomObject>
    <fields>
        <fullName>Box_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Box Document</label>
        <referenceTo>BoxDocument__c</referenceTo>
        <relationshipLabel>HotDocs Request Items</relationshipLabel>
        <relationshipName>HotDocs_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HotDocs_Request__c</fullName>
        <label>HotDocs Request</label>
        <referenceTo>HotDocs_Request__c</referenceTo>
        <relationshipLabel>HotDocs Request Items</relationshipLabel>
        <relationshipName>HotDocs_Request_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <label>Item ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Answer File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HotDocs Request Item</label>
    <nameField>
        <displayFormat>HRI-{0}</displayFormat>
        <label>Request Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HotDocs Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>